Ignores and changes because or change to PaperAPI